--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,7 +11,7 @@
 
 @import 'header.scss';
 @import 'section1.scss';
-@import 'video_section.scss'
+@import 'video_section.scss';
 @import 'card_member.scss';
 
 
