--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,11 +9,11 @@
 @import 'variables.scss';
 
 
-@import 'header.scss';
-@import 'section1.scss';
-@import 'video_section.scss';
-@import 'card_member.scss';
 
+
+
+
+@import 'footer.scss';
 
 
 
